Fixed buttons going to overflow when coming out of full screen

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_toolbars.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_toolbars.scss
@@ -222,7 +222,7 @@
 		height: var(--toolbarbutton-height) !important;
 		align-items: center;
 		justify-content: center;
-		transition: all 150ms linear;
+		transition: border 150ms linear, box-shadow 150ms linear;
 		border: 1px solid var(--toolbarbutton-border-color-normal, var(--default-toolbarbutton-border-color-normal));
 		border-radius: var(--toolbarbutton-border-radius);
 		flex-shrink: 0 !important;
@@ -263,6 +263,50 @@
 			box-shadow: var(--toolbarbutton-shadow-normal);
 		}
 
+		&:not([disabled]) {
+			&:hover {
+				border: 1px solid var(--toolbarbutton-border-color-hot, var(--default-toolbarbutton-border-color-hot));
+	
+				&::before {
+					opacity: 1;
+				}
+				&::after {
+					box-shadow: var(--toolbarbutton-shadow-hot);
+				}
+	
+				.toolbarbutton-badge-stack,
+				.toolbarbutton-icon,
+				image:first-of-type {
+					background-color: transparent !important;
+					filter: saturate(1.5)
+							var(--toolbarbutton-icon-drop-shadow);
+				}
+			}
+
+			&:active,
+			&[open] {
+				border: 1px solid var(--toolbarbutton-border-color-active, var(--default-toolbarbutton-border-color-active));
+				box-shadow: inset 0 0 0px 1px rgba(0, 0, 0, 0.05),
+							inset 0 0 6px 1px rgba(0, 0, 0, 0.1) !important;
+				transition: none !important;
+	
+				&::before {
+					opacity: 1;
+					background: var(--toolbarbutton-active-background);
+					transition: none;
+				}
+				&::after {
+					box-shadow: none;
+				}
+	
+				.toolbarbutton-badge-stack,
+				.toolbarbutton-icon,
+				image:first-of-type {
+					filter: unset;
+				}
+			}
+		}
+
 		.toolbarbutton-icon,
 		&:not(.menu-right) > image:first-of-type {
 			border-radius: 0 !important;
@@ -295,47 +339,6 @@
 			align-self: end !important;
 			justify-self: center !important;
 			z-index: 1;
-		}
-
-		&:not([disabled]):hover {
-			border: 1px solid var(--toolbarbutton-border-color-hot, var(--default-toolbarbutton-border-color-hot));
-
-			&::before {
-				opacity: 1;
-			}
-			&::after {
-				box-shadow: var(--toolbarbutton-shadow-hot);
-			}
-
-			.toolbarbutton-badge-stack,
-			.toolbarbutton-icon,
-			image:first-of-type {
-				background-color: transparent !important;
-				filter: saturate(1.5)
-						var(--toolbarbutton-icon-drop-shadow);
-			}
-		}
-		&:not([disabled]):active,
-		&:not([disabled])[open] {
-			border: 1px solid var(--toolbarbutton-border-color-active, var(--default-toolbarbutton-border-color-active));
-			box-shadow: inset 0 0 0px 1px rgba(0, 0, 0, 0.05),
-						inset 0 0 6px 1px rgba(0, 0, 0, 0.1) !important;
-			transition: none !important;
-
-			&::before {
-				opacity: 1;
-				background: var(--toolbarbutton-active-background);
-				transition: none;
-			}
-			&::after {
-				box-shadow: none;
-			}
-
-			.toolbarbutton-badge-stack,
-			.toolbarbutton-icon,
-			image:first-of-type {
-				filter: unset;
-			}
 		}
 	}
 
